--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,4 +4,4 @@ title: Certificates
 permalink: /about/
 ---
 
-<a href="assets/img/growgreek.pdf">Grow Greek Tourism Online</a>
+<a href="resume-cv/tree/master/assets/img/growgreek.pdf">Grow Greek Tourism Online</a>
