--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,4 +4,4 @@ title: Certificates
 permalink: /about/
 ---
 
-<a href="certificates/growgreek.pdf">Grow Greek Tourism Online</a>
+<a href="/resume-cv/blob/master/_pages/certificates/growgreek.pdf">Grow Greek Tourism Online</a>
