--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,4 +4,4 @@ title: Certificates
 permalink: /about/
 ---
 
-<a href="certicates/growgreek.pdf">Grow Greek Tourism Online</a>
+<a href="about/growgreek.pdf">Grow Greek Tourism Online</a>
