--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,3 +5,4 @@ permalink: /about/
 ---
 
 <a href="https://dhmhtrhsd.github.io/resume-cv/assets/img/growgreek.pdf">Grow Greek Tourism Online</a>
+Examination for the Certificate of Proficiency in English (ECPE)
