--- a/_pages/about.html
+++ b/_pages/about.html
@@ -6,3 +6,4 @@ permalink: /about/
 
 <a href="https://dhmhtrhsd.github.io/resume-cv/assets/img/growgreek.pdf">Grow Greek Tourism Online</a>
 <p>Examination for the Certificate of Proficiency in English (ECPE)</p>
+<a href="https://dhmhtrhsd.github.io/resume-cv/assets/img/Διαμαντόπουλος.pdf">Data Mining Algorithms and Medical Applications</a>
